# secure-messenger

./: .gitignore  README.md  README_RU.md  build_server.bat  docker-compose.yml  install.sh
.github/workflows/: build-release.yml
android/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/privmsg/app/: MainActivity.kt  PrivMsgApplication.kt
android/app/src/main/kotlin/com/privmsg/app/data/webrtc/: CallManager.kt  CallState.kt
android/app/src/main/kotlin/com/privmsg/app/service/: CallService.kt  MessageService.kt  WebSocketManager.kt
android/app/src/main/kotlin/com/privmsg/app/ui/: PrivMsgApp.kt
android/app/src/main/kotlin/com/privmsg/app/ui/components/: VideoMessageComposable.kt  VoiceMessageComposable.kt
android/app/src/main/kotlin/com/privmsg/app/ui/screens/: CallScreen.kt  ChatScreen.kt  HomeScreen.kt  LoginScreen.kt  NewChatScreen.kt  SettingsScreen.kt  SplashScreen.kt
android/app/src/main/kotlin/com/privmsg/app/ui/theme/: Theme.kt  Type.kt
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
config/coturn/: turnserver.conf
config/server/: config.toml
core/: Cargo.toml
core/src/: crypto.rs  error.rs  lib.rs  models.rs  network.rs  storage.rs
desktop/: Cargo.toml  Cross.toml
desktop/src/: app.rs  config.rs  crypto.rs  database.rs  main.rs  messages.rs  network.rs  state.rs  theme.rs
desktop/src/screens/: call.rs  chat.rs  home.rs  login.rs  mod.rs  settings.rs
desktop/src/widgets/: mod.rs
scripts/: build_all.bat  build_all.sh  build_android.sh  build_client.sh  build_desktop.bat  build_desktop.sh  build_server.sh
server/: Cargo.toml  Cross.toml  Dockerfile
server/src/: config.rs  crypto.rs  error.rs  main.rs  models.rs  storage.rs  websocket.rs
server/src/handlers/: admin.rs  auth.rs  files.rs  health.rs  messages.rs  mod.rs  turn.rs  users.rs  websocket.rs
server/tests/: integration_tests.rs
